--- a/porch_lights/templates/main.html
+++ b/porch_lights/templates/main.html
@@ -20,9 +20,9 @@
 			<div class="col-1"></div><!-- Spacer -->
 			<div class="col-10">
 				{% if settings['power'] == False %}
-					<a class="btn btn-success btn-lg btn-block" href="/power/on" role="button"><span class='fa fa-power-off'></span> Turn Power On</a>
+					<a class="btn btn-success btn-block" href="/power/on" role="button"><span class='fa fa-power-off'></span> Turn Power On</a>
 				{% else %}
-					<a class="btn btn-danger btn-lg btn-block" href="/power/off" role="button"><span class='fa fa-power-off'></span> Turn Power off</a>
+					<a class="btn btn-danger btn-block" href="/power/off" role="button"><span class='fa fa-power-off'></span> Turn Power off</a>
 				{% endif %}
 			</div>
 			<div class="col-1"></div><!-- Spacer -->
@@ -32,14 +32,14 @@
 			<div class="col-1"></div>
 			<div class="input-group col-10">
 				<div class="input-group-prepend">
-					<button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown">Color   </button>
+					<button class="btn btn-secondary dropdown-toggle " type="button" data-toggle="dropdown" {% if settings['pattern_running']==True %} disabled = "disabled" {% endif %}>Color   </button>
 					<div class="dropdown-menu">
 						<a class="dropdown-item color-picker" id="Red">Red</a>
 						<a class="dropdown-item color-picker" id="Blue">Blue</a>
 						<a class="dropdown-item color-picker" id="Green">Green</a>
 					</div>
 				</div>
-			  <input type="text" class="form-control" id="color-option" readonly>
+			  <input type="text" class="form-control" id="color-option" value="{{settings['color']}}" readonly>
 			</div>
 			<div class="col-1"></div>
 		</div><!-- End Color Row-->
@@ -55,7 +55,7 @@
 						<a class="dropdown-item pattern-picker" id="Green">Green</a>
 					</div>
 				</div>
-			  <input type="text" class="form-control" id="pattern-option" readonly>
+			  <input type="text" class="form-control" id="pattern-option" value="{{settings['pattern']}}"readonly>
 			</div>
 			<div class="col-1"></div>
 		</div><!-- End Shadow Row-->
@@ -64,9 +64,9 @@
 			<div class="col-1"></div><!-- Spacer -->
 			<div class="col-10">
 				{% if settings['power'] == False %}
-					<button id="startme" type="button" class="btn btn-danger btn-block"><span class='fa fa-power-off'></span> Start Robot</button>
+					<button id="startme" type="button" class="btn btn-info btn-block"><span class='fa fa-power-off'></span> Start Program</button>
 				{% else %}
-					<button id="startme" type="button" class="btn btn-danger btn-block"><span class='fa fa-power-off'></span> Start Robot</button>
+					<button id="stopme" type="button" class="btn btn-secondary btn-block"><span class='fa fa-power-off'></span> Stop Program </button>
 				{% endif %}
 			</div>
 			<div class="col-1"></div><!-- Spacer -->
