--- a/porch_lights/static/css/main.css
+++ b/porch_lights/static/css/main.css
@@ -33,3 +33,12 @@ body {
 .pattern-picker img {
 	padding-right:1rem;
 }
+.color-one-picker img {
+	padding-right:1rem;
+}
+.color-two-picker img {
+	padding-right:1rem;
+}
+.color-three-picker img {
+	padding-right:1rem;
+}
