--- a/porch_lights/templates/main.html
+++ b/porch_lights/templates/main.html
@@ -58,14 +58,14 @@
 					{% if settings['pattern_running']==True or settings['power']==False %} disabled = "disabled" {% endif %}
 					>Color 1</button>
 					<div class="dropdown-menu">
-						<a class="dropdown-item color-one-picker" id="White">White</a>
-						<a class="dropdown-item color-one-picker" id="Red">Red</a>
-						<a class="dropdown-item color-one-picker" id="Orange">Orange</a>
-						<a class="dropdown-item color-one-picker" id="Yellow">Yellow</a>
-						<a class="dropdown-item color-one-picker" id="Green">Green</a>
-						<a class="dropdown-item color-one-picker" id="Teal">Teal</a>
-						<a class="dropdown-item color-one-picker" id="Blue">Blue</a>
-						<a class="dropdown-item color-one-picker" id="Pink">Pink</a>
+						<a class="dropdown-item color-one-picker" id="White"><img src="{{url_for('static', filename='images/white.svg')}}">White</a>
+						<a class="dropdown-item color-one-picker" id="Red"><img src="{{url_for('static', filename='images/red.svg')}}">Red</a>
+						<a class="dropdown-item color-one-picker" id="Orange"><img src="{{url_for('static', filename='images/orange.svg')}}">Orange</a>
+						<a class="dropdown-item color-one-picker" id="Yellow"><img src="{{url_for('static', filename='images/yellow.svg')}}">Yellow</a>
+						<a class="dropdown-item color-one-picker" id="Green"><img src="{{url_for('static', filename='images/green.svg')}}">Green</a>
+						<a class="dropdown-item color-one-picker" id="Teal"><img src="{{url_for('static', filename='images/teal.svg')}}">Teal</a>
+						<a class="dropdown-item color-one-picker" id="Blue"><img src="{{url_for('static', filename='images/blue.svg')}}">Blue</a>
+						<a class="dropdown-item color-one-picker" id="Pink"><img src="{{url_for('static', filename='images/pink.svg')}}">Pink</a>
 					</div>
 				</div>
 				<input type="text" class="form-control" id="color-one-option" value="{{settings['color_one']}}" readonly>
@@ -80,14 +80,14 @@
 					{% if settings['pattern_running']==True or settings['power']==False %} disabled = "disabled" {% endif %}
 					>Color 2</button>
 					<div class="dropdown-menu">
-						<a class="dropdown-item color-two-picker" id="White">White</a>
-						<a class="dropdown-item color-two-picker" id="Red">Red</a>
-						<a class="dropdown-item color-two-picker" id="Orange">Orange</a>
-						<a class="dropdown-item color-two-picker" id="Yellow">Yellow</a>
-						<a class="dropdown-item color-two-picker" id="Green">Green</a>
-						<a class="dropdown-item color-two-picker" id="Teal">Teal</a>
-						<a class="dropdown-item color-two-picker" id="Blue">Blue</a>
-						<a class="dropdown-item color-two-picker" id="Pink">Pink</a>
+						<a class="dropdown-item color-two-picker" id="White"><img src="{{url_for('static', filename='images/white.svg')}}">White</a>
+						<a class="dropdown-item color-two-picker" id="Red"><img src="{{url_for('static', filename='images/red.svg')}}">Red</a>
+						<a class="dropdown-item color-two-picker" id="Orange"><img src="{{url_for('static', filename='images/orange.svg')}}">Orange</a>
+						<a class="dropdown-item color-two-picker" id="Yellow"><img src="{{url_for('static', filename='images/yellow.svg')}}">Yellow</a>
+						<a class="dropdown-item color-two-picker" id="Green"><img src="{{url_for('static', filename='images/green.svg')}}">Green</a>
+						<a class="dropdown-item color-two-picker" id="Teal"><img src="{{url_for('static', filename='images/teal.svg')}}">Teal</a>
+						<a class="dropdown-item color-two-picker" id="Blue"><img src="{{url_for('static', filename='images/blue.svg')}}">Blue</a>
+						<a class="dropdown-item color-two-picker" id="Pink"><img src="{{url_for('static', filename='images/pink.svg')}}">Pink</a>
 					</div>
 				</div>
 				<input type="text" class="form-control" id="color-two-option" value="{{settings['color_two']}}"readonly>
@@ -102,14 +102,14 @@
 					{% if settings['pattern_running']==True or settings['power']==False %} disabled = "disabled" {% endif %}
 					>Color 3</button>
 					<div class="dropdown-menu">
-						<a class="dropdown-item color-three-picker" id="White">White</a>
-						<a class="dropdown-item color-three-picker" id="Red">Red</a>
-						<a class="dropdown-item color-three-picker" id="Orange">Orange</a>
-						<a class="dropdown-item color-three-picker" id="Yellow">Yellow</a>
-						<a class="dropdown-item color-three-picker" id="Green">Green</a>
-						<a class="dropdown-item color-three-picker" id="Teal">Teal</a>
-						<a class="dropdown-item color-three-picker" id="Blue">Blue</a>
-						<a class="dropdown-item color-three-picker" id="Pink">Pink</a>
+						<a class="dropdown-item color-three-picker" id="White"><img src="{{url_for('static', filename='images/white.svg')}}">White</a>
+						<a class="dropdown-item color-three-picker" id="Red"><img src="{{url_for('static', filename='images/red.svg')}}">Red</a>
+						<a class="dropdown-item color-three-picker" id="Orange"><img src="{{url_for('static', filename='images/orange.svg')}}">Orange</a>
+						<a class="dropdown-item color-three-picker" id="Yellow"><img src="{{url_for('static', filename='images/yellow.svg')}}">Yellow</a>
+						<a class="dropdown-item color-three-picker" id="Green"><img src="{{url_for('static', filename='images/green.svg')}}">Green</a>
+						<a class="dropdown-item color-three-picker" id="Teal"><img src="{{url_for('static', filename='images/teal.svg')}}">Teal</a>
+						<a class="dropdown-item color-three-picker" id="Blue"><img src="{{url_for('static', filename='images/blue.svg')}}">Blue</a>
+						<a class="dropdown-item color-three-picker" id="Pink"><img src="{{url_for('static', filename='images/pink.svg')}}">Pink</a>
 					</div>
 				</div>
 				<input type="text" class="form-control" id="color-three-option" value="{{settings['color_three']}}"readonly>
