--- a/porch_lights/templates/main.html
+++ b/porch_lights/templates/main.html
@@ -4,8 +4,9 @@
 	<title> Fritter </title>
 	<link rel="shortcut icon" href="{{ url_for('static', filename='images/flask.ico') }}">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+	<link rel="stylesheet" href="{{url_for('static', filename='css/bootstrap.min.css')}}">
+<!-- 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous"> -->
+	<link rel="stylesheet" href="{{url_for('static', filename='css/all.css')}}">
 	<link rel="stylesheet" href="{{url_for('static', filename='css/main.css')}}">
 </head>
 <body>
@@ -144,11 +145,11 @@
 				{% if settings['pattern_running'] == False %}
 					<button id="startme" type="button" class="btn btn-info btn-block"
 					{% if settings['power']==False %} disabled = "disabled" {% endif %}
-					><span class='fa fa-power-off'></span> Start Program</button>
+					><span class='fa fa-play'></span> Start Program</button>
 				{% else %}
 					<button id="stopme" type="button" class="btn btn-secondary btn-block"
 					{% if settings['power']==False %} disabled = "disabled" {% endif %}
-					><span class='fa fa-power-off'></span> Stop Program </button>
+					><span class='fa fa-stop'></span> Stop Program </button>
 				{% endif %}
 			</div>
 			<div class="col-1"></div><!-- Spacer -->
@@ -167,11 +168,12 @@
 		</nav>
 
 	<!-- Load javascript -->
-	<script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
+	<script type="text/javascript" src="{{url_for('static', filename='js/jquery-3.4.0.min.js')}}"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="{{url_for('static', filename='js/popper.min.js')}}"></script>
+<!-- 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script> -->
+	<script type="text/javascript" src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
     <script type="text/javascript" src="{{url_for('static', filename='js/main.js')}}"></script>	
-    <script type="text/javascript" src="{{url_for('static', filename='js/piklor.js')}}"></script>
 </body>
 
 </html>
